--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/ress.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/iziModal.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
+    <script src="assets/js/iziModal.min.js" type="text/javascript"></script>
     <title>Document</title>
 </head>
 
@@ -14,7 +17,11 @@
         <h1 class="head-h1">What is today's ToDo?</h1>
     </header>
     <nav class="nav-info">
-
+        <div id="modal-default">
+            <div class="close">
+                <a data-izimodal-close="">×</a>
+            </div>
+        </div>
     </nav>
     <aside class="left-bar">
         <h2 class="left-info">サイドバー</h2>
@@ -24,17 +31,16 @@
             <li class="task-type">今年</li>
         </ul>
     </aside>
+    <button class="open-default">default</button>
     <article class="main">
         <section class="main-board">
             <button class="add-btn">追加</button>
             <ul class="task-list"></ul>
-
         </section>
     </article>
     <aside class="task-info"></aside>
     <footer class="foo-info"></footer>
 
-    <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="assets/js/task.js"></script>
 </body>
 
