add : input-modal

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     <nav class="nav-info">
         <div id="modal-default">
-            <div class="close">
-                <a data-izimodal-close="">×</a>
-            </div>
+            <p>このモーダルウィンドウはデフォルト設定です</p>
+            <input type="text" class="input-task">
+            <button class="add-btn">追加</button>
         </div>
     </nav>
     <aside class="left-bar">
@@ -34,7 +34,6 @@
     <button class="open-default">default</button>
     <article class="main">
         <section class="main-board">
-            <button class="add-btn">追加</button>
             <ul class="task-list"></ul>
         </section>
     </article>
