--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </section>
         <!-- main --></article>
             
-        <aside class="task-info">
+        <aside class="right-bar">
             <button class="open-options button">
                 <img src="assets/images/plus3.png" alt="Icon-Plus">
             </button>
