--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <nav class="nav-info">
         <div id="modal-options" data-izimodal-group="group1" data-izimodal-loop="" data-izimodal-title="タスクを追加">
             <div class="input-main">
-                <input type="text" class="input-task">
+                <input type="text" class="input-task" placeholder="タイトル">
+                <textarea class="input-task-main" rows="4" cols="40"></textarea>
                 <input type="date" class="input-limit">
                 <button class="add-btn">追加</button>
             <!-- input-main --></div>
