--- a/front/index.html
+++ b/front/index.html
@@ -22,18 +22,18 @@
             <div class="input-main">
                 <input type="text" class="input-task" placeholder="タイトル">
                 <textarea class="input-task-main" rows="4" cols="40"></textarea>
-                <input type="date" class="input-limit">
+                <input type="datetime-local" class="input-limit">
                 <button class="add-btn">追加</button>
             <!-- input-main --></div>
         <!-- modal-options --></div>
         <div id="modal-alert" data-izimodal-title="無効な日付です" data-izimodal-subtitle="test" ></div>
         <div id="modal-options2" data-izimodal-group="group2" data-izimodal-loop="" data-izimodal-title="タスクを更新">
-            <div class="input-main">
-                <input type="text" class="input-task" placeholder="タイトル">
-                <textarea class="input-task-main" rows="4" cols="40"></textarea>
-                <input type="date" class="input-limit">
+            <div class="edit-main">
+                <input type="text" class="edit-task" placeholder="タイトル">
+                <textarea class="edit-task-main" rows="4" cols="40"></textarea>
+                <input type="datetime-local" class="edit-limit">
                 <button class="edit-btn">更新</button>
-            <!-- input-main --></div>
+            <!-- edit-main --></div>
         <!-- modal-options2 --></div>
 
     <!-- nav-info --></nav>
