--- a/front/index.html
+++ b/front/index.html
@@ -29,7 +29,7 @@
         <div id="modal-alert" data-izimodal-title="無効な日付です" data-izimodal-subtitle="test" ></div>
         <div id="modal-options2" data-izimodal-group="group2" data-izimodal-loop="" data-izimodal-title="タスクを更新">
             <div class="edit-main">
-                <input type="text" class="edit-task" placeholder="タイトル">
+                <input type="text" class="edit-task">
                 <textarea class="edit-task-main" rows="4" cols="40"></textarea>
                 <input type="datetime-local" class="edit-limit">
                 <button class="edit-btn">更新</button>
