--- a/front/index.html
+++ b/front/index.html
@@ -42,7 +42,7 @@
         <!-- modal-options2 --></div>
 
         <!-- 削除modal -->
-        <div id="modal-del" data-izimodal-group="group3" data-izimodal-loop="" data-izimodal-title="タスクを削除しました">
+        <div id="modal-del" data-izimodal-group="group3" data-izimodal-loop="" data-izimodal-title="タスクを削除しますか？">
             <div class="del-main">
                 <button class="del-yes">はい</button>
                 <button class="del-no">いいえ</button>
