add : task filter

--- a/front/index.html
+++ b/front/index.html
@@ -54,9 +54,9 @@
         <aside class="left-bar">
             <h2 class="left-info">サイドバー</h2>
             <ul class="side-task">
-                <li class="task-type">今日</li>
-                <li class="task-type">今週</li>
-                <li class="task-type">今年</li>
+                <button class="today-task">今日まで</button>
+                <button class="week-task">1週間以内</button>
+                <button class="month-task">今月以内</button>
             <!-- side-task --></ul>
         <!-- left-bar --></aside>
             
