add : order task

--- a/front/index.html
+++ b/front/index.html
@@ -52,12 +52,15 @@
 
     <div class="wrapper">
         <aside class="left-bar">
-            <h2 class="left-info">サイドバー</h2>
+            <h2 class="left-info">期限フィルター</h2>
             <ul class="side-task">
-                <button class="today-task">今日まで</button>
-                <button class="week-task">1週間以内</button>
-                <button class="month-task">今月以内</button>
+                <li class="today-task">今日まで</li>
+                <li class="week-task">1週間以内</li>
+                <li class="month-task">今月以内</li>
+                <li class="asc">昇順</li>
+                <li class="desc">降順</li>
             <!-- side-task --></ul>
+            <iframe src="https://calendar.google.com/calendar/embed?src=92grc8209u04ntbhdsv38tlfuk%40group.calendar.google.com&ctz=Asia%2FTokyo" style="border: 2" width="270" height="400" frameborder="0" scrolling="no"></iframe>
         <!-- left-bar --></aside>
             
         <article class="main">
@@ -71,7 +74,7 @@
                 <img src="assets/images/plus3.png" alt="Icon-Plus">
             </button>
         </aside>
-    </div>
+     <!-- wapper --></div>
     
     <footer class="foo-info"></footer>
 
