add : today's task modal

--- a/front/index.html
+++ b/front/index.html
@@ -46,6 +46,10 @@
                 <button class="del-no">いいえ</button>
             </div>
         <!-- modal-del --></div>
+
+        <div id="modal-check" data-izimodal-group="group4" data-izimodal-loop="" data-izimodal-title="今日のタスク">
+                <p class="message"></p>
+        <!-- modal-check --></div>
     <!-- nav-info --></nav>
 
     <div class="wrapper">
