--- a/front/index.html
+++ b/front/index.html
@@ -20,7 +20,7 @@
         <div id="modal-options" data-izimodal-group="group1" data-izimodal-loop="" data-izimodal-title="タスクを追加">
             <div class="input-main">
                 <input type="text" class="input-task" placeholder="タイトル">
-                <textarea class="input-task-main" rows="4" cols="40"></textarea>
+                <textarea class="input-task-main" rows="4" cols="40" placeholder="タスクの内容"></textarea>
                 <input type="datetime-local" class="input-limit">
                 <button class="add-btn">追加</button>
             <!-- input-main --></div>
